5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1807_2566.log
== TEST (2019-06-07 12:57:27) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:57:47) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(round(cont,2))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:58:27) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:03:30) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
#print(cont)

for i in range(size(cont)):
	cont[i] = 

		
-- ERROR:
File "XXXX", line 24
    cont[i] = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:03:36) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

for i in range(size(cont)):
	cont[i] = 

		
-- ERROR:
File "XXXX", line 24
    cont[i] = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:03:41) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	cont[i] = 

		
-- ERROR:
File "XXXX", line 24
    cont[i] = 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:03:47) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:04:15) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:04:31) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:04:43) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:05:03) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

for i in range(size(cont)):
	cont[i] = 

		
-- ERROR:
File "XXXX", line 24
    cont[i] = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:05:12) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:05:26) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

#for i in range(size(cont)):
	#cont[i] = 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:09:57) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
print(cont)

for i in range(size(cont)):
	cont[i] = cont[i] / (size(faltas) * 100) 

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:11:17) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
#print(cont)

for i in range(size(cont)):
	cont[i] = cont[i] / (size(faltas) * 100) 
	cont[i] = round(cont,1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:11:38) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	else:
		cont[5] = cont[5] + 1
#print(cont)

for i in range(size(cont)):
	cont[i] = cont[i] / (size(faltas) * 100) 
	cont[i] = round(cont[i],1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:16:06) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	if(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	if (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	if (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	if (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1
#print(cont)

for i in range(size(cont)):
	cont[i] = cont[i] / (size(faltas) * 100) 
	cont[i] = round(cont[i],1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:17:13) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1
	print(cont)
#print(cont)

for i in range(size(cont)):
	cont[i] = cont[i] / (size(faltas) * 100) 
	cont[i] = round(cont[i],1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:18:03) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1
	print(cont)
#print(cont)

#for i in range(size(cont)):
#	cont[i] = cont[i] / (size(faltas) * 100) 
#	cont[i] = round(cont[i],1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:20:04) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6, dtype = int)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1
	print(cont)
#print(cont)

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)
print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:20:48) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 13:21:15) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))

cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	

		
-- EXECUTION TIME:
1.11356
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  0. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  0.  23.1  7.7 15.4 30.8]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:23:15) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))
cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont [1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:23:58) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))
cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] = cont[0] + 1
	
	elif(faltas[i] == 3):
		cont[1] == cont[1] + 1
	
	elif (faltas[i] == 4):
		cont[2] = cont[2] + 1
	
	elif (faltas[i] == 5):
		cont[3] = cont[3] + 1
	
	elif (faltas[i] == 6):
		cont[4] = cont[4] + 1
	
	else:
		cont[5] = cont[5] + 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 13:25:14) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))
cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] += 1
	
	elif(faltas[i] == 3):
		cont[1] += 1
	
	elif (faltas[i] == 4):
		cont[2] += 1
	
	elif (faltas[i] == 5):
		cont[3] += 1
	
	elif (faltas[i] == 6):
		cont[4] += 1
	
	else:
		cont[5] += 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 13:25:29) 
-- CODE:
from numpy import*

faltas = array(eval(input("faltas:")))
cont = zeros(6)

for i in range(size(faltas)):
	
	if (faltas[i] == 2):
		cont[0] += 1
	
	elif(faltas[i] == 3):
		cont[1] += 1
	
	elif (faltas[i] == 4):
		cont[2] += 1
	
	elif (faltas[i] == 5):
		cont[3] += 1
	
	elif (faltas[i] == 6):
		cont[4] += 1
	
	else:
		cont[5] += 1

for i in range(size(cont)):
	cont[i] = (cont[i] / size(faltas)) * 100 
	cont[i] = round(cont[i],1)

print(cont)	
-- EXECUTION TIME:
1.21735
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
